[package]
name = "seine"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
gasket = { git = "https://github.com/construkts/gasket-rs.git", features = [
    "derive",
] }
hex = "0.4.3"
miette = { version = "7.2.0", features = ["fancy"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serenity = { version = "0.12.2", default-features = false, features = [
    "rustls_backend",
    "model",
] }
tokio = { version = "1.38.0", features = ["full"] }
utxorpc = "0.6.0"
